--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "webd6201-test1",
+  "name": "WEBD3201-Test1",
   "version": "1.0.0",
-  "description": "Demo Project for WEBD6201 - Test 1",
+  "description": "this is a project for test 1",
   "main": "app.js",
-  "author": "Tom Tsiliopoulos",
+  "author": "Dhruv vyas",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0"
-  }
+  },
+  "repository": "https://github.com/dhruv273/WEBD6201-Test1.git"
 }
